# Duplicate-Media-Finder

./: .gitignore  BUILD.md  README.md  app.py  build_exe.bat  build_exe.ps1  main.py  pyproject.toml  requirements.txt  test_exe.bat  verify_build.ps1
