[project]
name = "img-video-dup-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagehash>=4.2.0",
    "librosa>=0.8.0",
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "pillow>=8.0.0",
    "scipy>=1.7.0",
    "tqdm>=4.60.0",
]
